Fixing alignment issue with search button

--- a/themes/bc/static/css/refresh.css
+++ b/themes/bc/static/css/refresh.css
@@ -266,6 +266,7 @@ body {
 #search-panel input.form-control, #search-panel button.btn.btn-default  {
     height: 50px;
     font-size: 20px;
+    margin-top: -1px; /* fixes alignment issue in Firefox */
 }
 
 
